@@ -6,12 +6,16 @@ plugins {
 
   // https://github.com/bmuschko/gradle-tomcat-plugin
   id "com.bmuschko.tomcat" version "latest.release"
+  //?  id("org.gretty") version "4.0.+" // https://gretty-gradle-plugin.github.io/gretty-doc/
 
   id("io.freefair.lombok")   version "latest.release" // id 'io.franzbecker.gradle-lombok' version 'latest.release'
-  id("name.remal.sonarlint") version "latest.release" // https://github.com/remal-gradle-plugins/sonarlint + https://lift.sonatype.com/
-  id("net.ltgt.errorprone")  version "latest.release" // https://errorprone.info/
 }
 
+java { // https://docs.gradle.org/current/userguide/toolchains.html
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(8)
+  }
+}
 repositories {
   mavenLocal()
   jcenter() // helps with JMS!
@@ -21,48 +25,26 @@ repositories {
   maven {
     url "https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/"
   }
-
   mavenCentral()
 }
 
 tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8'
   options.compilerArgs.addAll(['-Xlint:all', '-parameters', '-g', '-Xmaxwarns', '999'])
-
-  sourceCompatibility = 17 // for the IDE support
-  targetCompatibility = 8
-  options.release.set(8) // javac --release 7..18+
   options.deprecation = true
-  javaCompiler.set( javaToolchains.compilerFor {
-    languageVersion = JavaLanguageVersion.of(17)
-  })
-
-  options.errorprone {
-    enabled = true
-    disableWarningsInGeneratedCode = true
-    excludedPaths = ".*/(build/gen|test).*/.*"
-    disable("MissingSummary")
-    disable("ParameterName")
-    disable("UnusedVariable")
-    errorproneArgs = ["--illegal-access=warn"]
-  }
 }
 
 dependencies {
-  errorprone "com.google.errorprone:error_prone_core:latest.release"
-  // Java 8 support
-  annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:latest.release' // 0.4.2
-  compileOnly 'com.github.bsideup.jabel:jabel-javac-plugin:latest.release'
-  implementation("javax.annotation:javax.annotation-api:1.3.2") // @Resource
+  implementation("javax.annotation:javax.annotation-api:1.3.+") // @Resource
 
   implementation 'javax.servlet:servlet-api:2.5'
 
-  def springVersion = '5.+'
+  def springVersion = '3.+'
   implementation("org.springframework:spring-core:${springVersion}", "org.springframework:spring-context:${springVersion}")
   implementation("org.springframework:spring-context-support:${springVersion}", "org.springframework:spring-web:${springVersion}")
   implementation("org.springframework:spring-jdbc:${springVersion}", "org.springframework:spring-tx:${springVersion}")
-  implementation("org.springframework.security:spring-security-core:5.+",
-      "org.springframework.security:spring-security-web:5.+", "org.springframework.security:spring-security-config:5.+")
+  implementation("org.springframework.security:spring-security-core:${springVersion}",
+      "org.springframework.security:spring-security-web:${springVersion}", "org.springframework.security:spring-security-config:${springVersion}")
 
 
   implementation project(':click')
@@ -89,7 +71,6 @@ dependencies {
   testImplementation 'junit:junit:4.+'
   testImplementation 'org.mockito:mockito-inline:+'
 
-
   testImplementation project(':click-mock')
 
   // https://github.com/bmuschko/gradle-tomcat-plugin + id "com.bmuschko.tomcat" version "latest.release"
@@ -104,14 +85,10 @@ dependencies {
     }
   }
 }
-
-configurations {
-  all*.exclude group: "velocity", module: "velocity" // 1.3 they come from somewhere..
-  all*.exclude group: "commons-logging", module: "commons-logging"
-}
 // https://tomgregory.com/how-to-exclude-gradle-dependencies/
 configurations.all { // .implementation
-  exclude group: 'velocity', module: 'velocity'
+  exclude group: 'velocity', module: 'velocity' // 1.3
+  exclude group: "commons-logging", module: "commons-logging"
 }
 
 idea {
@@ -132,14 +109,11 @@ test {
   enableAssertions = true
   maxHeapSize = "500m"
 
-  System.setProperty("slf4j.detectLoggerNameMismatch", "true")
-  System.setProperty("file.encoding", "UTF-8")
-  System.setProperty("user.language", "en")
+  systemProperty("slf4j.detectLoggerNameMismatch", "true")
+  systemProperty("file.encoding", "UTF-8")
+  systemProperty("user.language", "en")
   Locale.setDefault(new Locale("en", "US"));
 }
 lombok {
   version = "latest.release"
-}
-sonarLint {
-  ignoreFailures = true
 }
